--- a/lib/locales/fa/translation.json
+++ b/lib/locales/fa/translation.json
@@ -12,6 +12,9 @@
     "saving": "در حال ذخیره..."
   },
   "cloud": {
+    "vagrant": {
+      "title": "Vagrant"
+    },
     "mizbanCloud": {
       "title": "میزبان کلود",
       "description": "ابتدا کلیدی که از وب سایت میزبان کلود دریافت کرده اید را در قسمت کلید قرار داده و پس از ذخیره کردن آن میتوانید از قسمت سرور یک سرور ایجاد نمایید.",
